# multi-llm-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  3-way-llm-conversation.ipynb  README.md  pyproject.toml
src/: __main__.py  config.py  llm_client.py  main.py  orchestrator.py  speakers.py
